# TECHIN517_labs

src/src/cse481c/joint_state_reader/src/joint_state_reader/: reader.py
src/src/fetch-picker/applications/config/: navigation.rviz
src/src/fetch-picker/applications/launch/: nav_rviz.launch
src/src/fetch-picker/applications/scripts/: arm_obstacle_demo.py  base_demo.py  cart_arm_demo.py  check_cart_post.py  ee_pose_demo.py  hallucinated_reach.py  head_demo.py  interactive_gripper.py  interactive_marker_demo.py  interactive_marker_navigation.py  joint_reader_demo.py  lab26_obstacles.py  marker_demo.py  path_vis.py  pbd_arm_server.py  pbd_cli.py  pbd_executor.py  pbd_recorder.py  publish_instructor_cloud.py  publish_saved_cloud.py  transformation_demo.py
src/src/fetch-picker/perception/: CMakeLists.txt  package.xml  setup.py
src/src/fetch-picker/perception/include/perception/: crop.h  downsample.h
src/src/fetch-picker/perception/src/: crop.cpp  downsample.cpp  point_cloud_demo.cpp  save_cloud_main.cpp
src/src/fetch-picker/perception/src/perception/: mock_camera.py
src/src/fetch-picker/robot_api/launch/: ar_desktop.launch
src/src/fetch-picker/robot_api/src/robot_api/: arm.py  base.py  gripper.py  head.py  torso.py
